# siltsong

./: LICENSE  M1-92.ipynb  MW.ipynb  README.md  __init__.ipynb  __init__.py  dev.ipynb  dust.py  executable.ipynb  pyproject.toml  scattering_efficiency.csv
.github/workflows/: release.yml
.ipynb_checkpoints/: M1-92-checkpoint.ipynb  MW-checkpoint.ipynb  dev-checkpoint.ipynb  executable-checkpoint.ipynb  extinction_efficiency-checkpoint.csv
src/: stars.py
src/examples/: MW.ipynb
src/siltsong/: __init__.py  dust.py
