[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siltsong"
dynamic = ["version"]
description = 'A multiple-scattering radiative transfer code for forward modeling PPNe, PNe, and more'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Yun Qi Li", email = "billyli@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/yunqibillyli/siltsong#readme"
Issues = "https://github.com/yunqibillyli/siltsong/issues"
Source = "https://github.com/yunqibillyli/siltsong"

[tool.hatch.version]
path = "src/siltsong/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/siltsong tests}"

[tool.coverage.run]
source_pkgs = ["siltsong", "tests"]
branch = true
parallel = true
omit = [
  "src/siltsong/__about__.py",
]

[tool.coverage.paths]
siltsong = ["src/siltsong", "*/siltsong/src/siltsong"]
tests = ["tests", "*/siltsong/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
